syntax = "proto3";
package payment.events;

message CoursePurchaseCompleted {
  string courseId = 1;
  string userId = 2;
}
