syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.lms.grpc";
package user;

service UserService {
  rpc getAllUserIds (GetAllUserIdsRequest) returns (GetAllUserIdsResponse);
}

message GetAllUserIdsRequest {}
message GetAllUserIdsResponse {
  repeated string userIds = 1;
}